--- a/assets/sass/components/_image.scss
+++ b/assets/sass/components/_image.scss
@@ -14,8 +14,8 @@
 		img {
 			display: block;
 		}
-
-		&.left,
+        
+        &.left,
 		&.right {
 			max-width: 40%;
 
@@ -77,3 +77,5 @@
 			}
 		}
 	}
+
+}
