--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -49,7 +49,7 @@
 		border-bg:			rgba(144,144,144,0.075),
 
 		accent1: (
-			bg:				#1bcea5,
+			bg:				#006666,
 			fg:				rgba(255,255,255,0.75),
 			fg-bold:		#ffffff,
 			fg-light:		rgba(255,255,255,0.5),
