--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3268,6 +3268,8 @@
 				font-weight: 700;
 			}
 
+/*
+
 		#header > nav {
 			position: absolute;
 			right: 0;
@@ -3410,7 +3412,7 @@
 				top: 1rem;
 				right: 1rem;
 			}
-
+/*
 		#header > .navPanelToggle {
 			-moz-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, top 0.2s ease-in-out, right 0.2s ease-in-out;
 			-webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, top 0.2s ease-in-out, right 0.2s ease-in-out;
